--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Navigation Bar-->
     <div class="nav-bar">
-      <h3>Johnathan Specter</h3>
+      <h3 id="johns">Johnathan Specter</h3>
       <nav>
         <ul>
           <li>Articles</li>
@@ -23,7 +23,7 @@
           <li>About</li>
         </ul>
       </nav>
-      <button>Get in touch</button>
+      <button onclick="window.location.href=index.html">Get in touch</button>
     </div>
 
     <!--Landing Page-->
@@ -131,7 +131,7 @@
     </div>
 
     <div class="footer">
-        <h3>Johnathan Specter</h3>
+        <h3 id="johns">Johnathan Specter</h3>
         <ul>
             <li><img src="Assets/Social Icons/Twitter.svg"></li>
             <li><img src="Assets/Social Icons/LinkedIn.svg"></li>
